--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
     <footer class="footer">
       <nav class="nav">
+        <a class="nav-link" href="index.html">home</a>
+        <a class="nav-link" href="fuckfastfashion.html">fuckfastfashion</a>
+        <a class="nav-link" href="mvp.html">mvp</a>
         <a class="nav-link" href="mailto:tomas@wearly.wtf">contact</a>
         <a class="nav-link" href="https://twitter.com/gestomas">created by: @gestomas</a>
       </nav>
