--- a/mvp.html
+++ b/mvp.html
@@ -2,25 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>F*ck</title>
+    <title>Wearly</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    <h1 style="text-align:center;" class="display-1 fuck">🖕🏽</h1>
-    <h1 style="text-align:center;   font-family: 'Nanum Gothic Coding', monospace;
-"class="display-3">(fast fashion).</h1>
+    <img style="margin-top:10%; margin-left:43%;" src="wearly-mvp.gif" alt="mvp gif">
 
-  <footer class="footer">
-    <nav class="nav">
-      <a class="nav-link" href="index.html">home</a>
-      <a class="nav-link" href="fuckfastfashion.html">fuckfastfashion</a>
-      <a class="nav-link" href="mvp.html">mvp</a>
-      <a class="nav-link" href="mailto:tomas@wearly.wtf">contact</a>
-      <a class="nav-link" href="https://twitter.com/gestomas">created by: @gestomas</a>
-    </nav>
-  </footer>
+    <footer class="footer">
+      <nav class="nav">
+        <a class="nav-link" href="index.html">home</a>
+        <a class="nav-link" href="fuckfastfashion.html">fuckfastfashion</a>
+        <a class="nav-link" href="mvp.html">mvp</a>
+        <a class="nav-link" href="mailto:tomas@wearly.wtf">contact</a>
+        <a class="nav-link" href="https://twitter.com/gestomas">created by: @gestomas</a>
+      </nav>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
