--- a/about.html
+++ b/about.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    <h1 class="main-title">Creating algorithms to change the fashion industry...</h1>
+    <h2 class="how">How do we change the fashion industry?</h2>
+
+    <h4 class="how">We have declared war on fast fashion. Wearly is here to challenge the fashion industry status quo by integrating fashion with complex algorithms. Wearly is your virtual wardrobe that will help you combine your clothes in the best way possible, that way you can get the most out of each piece. In our app you can sell the clothes that you no longer use and buy new clothes so that you can spice up your wardrobe, <br><br> This way we can be feel free again and have new clothes without having to commit to an industry that destroys our home planet and us.</h4>
+
+
 
     <footer class="footer">
       <nav class="nav">
@@ -18,6 +22,7 @@
       </nav>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
