--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
       <nav class="nav">
         <a class="nav-link" href="index.html">home</a>
         <a class="nav-link" href="about.html">about</a>
-        <a class="nav-link" href="terms_n_conditions.html">terms & conditions</a>
-        <a class="nav-link" href="privacy_policy.html">privacy</a>
+        <a class="nav-link" href="terms.html">terms</a>
+        <a class="nav-link" href="privacy.html">privacy</a>
         <a class="nav-link" href="mailto:founders@wearly.wtf">contact</a>
       </nav>
     </footer>
