--- a/beta.html
+++ b/beta.html
@@ -8,17 +8,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-    <h1 class="main-title">Creating algorithms to change the fashion industry...</h1>
 
-    <a href="beta.html" class="beta-btn btn btn-secondary btn-lg active" role="button" aria-pressed="true">Join Our Beta!</a>
+    <img src="mockup.png" width="40%" height="40%" alt="app mockup">
 
-<br>
-<br>
-<br>
-<br>
-<br>
-
-    <a href="https://www.producthunt.com/posts/wearly?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-wearly" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=194673&theme=light" alt="Wearly - Your Dresser Meets AI 🤖 | Product Hunt Embed" style="width: 250px; height: 54px;" width="250px" height="54px" /></a>
+    <a href="https://testflight.apple.com/join/o2wjP4FI" class="btn btn-lg btn-primary" role="button" >Try on TestFlight</a>
+    <!-- <a href="#" class="btn btn-lg btn-success" role="button">Try on Google Play</a> -->
 
     <footer class="footer">
       <nav class="nav">
@@ -31,6 +25,7 @@
       </nav>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
