--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
         <a class="nav-link" href="terms.html">terms</a>
         <a class="nav-link" href="privacy.html">privacy</a>
         <a class="nav-link" href="mailto:founders@wearly.wtf">contact</a>
+        <a class="nav-link" href="beta.html">Join Our Beta!</a>
       </nav>
     </footer>
 
