--- a/beta.html
+++ b/beta.html
@@ -11,8 +11,8 @@
 
     <img src="mockup.png" width="40%" height="40%" alt="app mockup">
 
-    <a href="https://testflight.apple.com/join/o2wjP4FI" class="btn btn-lg btn-primary" role="button" >Try on TestFlight</a>
-    <!-- <a href="#" class="btn btn-lg btn-success" role="button">Try on Google Play</a> -->
+    <a href="https://testflight.apple.com/join/o2wjP4FI" class="btn btn-lg btn-primary" role="button" >Try on iOS</a>
+    <a href="https://play.google.com/apps/testing/com.wearly.wearly" class="btn btn-lg btn-success" role="button">Try on Android</a>
 
     <footer class="footer">
       <nav class="nav">
