--- a/beta.html
+++ b/beta.html
@@ -9,10 +9,21 @@
   </head>
   <body>
 
+    <video class="center" width="520" height="440" autoplay loop>
+      <source src="WearlyPromo.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
+
     <img src="mockup.png" width="40%" height="40%" alt="app mockup">
 
-    <a href="https://testflight.apple.com/join/o2wjP4FI" class="btn btn-lg btn-primary" role="button" >Try on iOS</a>
-    <a href="https://play.google.com/apps/testing/com.wearly.wearly" class="btn btn-lg btn-success" role="button">Try on Android</a>
+    <a href="mailto:founders@wearly.wtf?subject=Give%20that%20sweet%20beta%20🤭" class="btn btn-lg btn-primary dissabled" role="button">just ask 😄</a>
+
+    <img src="mockup3.png" width="40%" height="40%" alt="app mockup">
+
+    <img src="mockup2.png" width="40%" height="40%" alt="app mockup">
+
+    <img src="mockup4.png" width="40%" height="40%" alt="app mockup">
+
 
     <footer class="footer">
       <nav class="nav">
