--- a/index.html
+++ b/index.html
@@ -4,21 +4,14 @@
     <meta charset="utf-8">
     <title>Wearly</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="cool.css">
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
-  <body>
-    <h1 class="main-title">Creating algorithms to change the fashion industry...</h1>
+<body class="color-change-2x">
+    <h1 class="main-title fade-in">#makefashionsustaianable</h1>
 
     <a href="beta.html" class="beta-btn btn btn-secondary btn-lg active" role="button" aria-pressed="true">Join Our Beta!</a>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-
-    <a href="https://www.producthunt.com/posts/wearly?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-wearly" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=194673&theme=light" alt="Wearly - Your Dresser Meets AI 🤖 | Product Hunt Embed" style="width: 250px; height: 54px;" width="250px" height="54px" /></a>
 
     <footer class="footer">
       <nav class="nav">
