--- a/about.html
+++ b/about.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
+
+    <h2 class="how">Why?</h2>
+
+    <h4 class="how">OUR WORLD IS DYING, the fashion industry contributes to almost 8% of global climate change, if we don't do nothing this percentage will keep on growing. Millions of clothes get thrown away just because we haven't been educated on how to maximize our usage, at Wearly we found that we can lower those numbers. Our motivation is this planet. We need to change our consumption habits or else it will destroy us. If we lower this percentage by just a bit we can focus on lowering other percentages until we are clean.</h4>
+
     <h2 class="how">How do we change the fashion industry?</h2>
 
-    <h4 class="how">We have declared war on fast fashion. Wearly is here to challenge the fashion industry status quo by integrating fashion with complex algorithms. Wearly is your virtual wardrobe that will help you combine your clothes in the best way possible, that way you can get the most out of each piece. In our app you can sell the clothes that you no longer use and buy new clothes so that you can spice up your wardrobe, <br><br> This way we can be feel free again and have new clothes without having to commit to an industry that destroys our home planet and us.</h4>
+    <h4 class="how">Wearly is here to challenge the fashion industry status quo by integrating fashion with complex algorithms and AI. Wearly is your virtual wardrobe that will help you combine your clothes in the best way possible and improve your consumption habits, that way you can get the most out of each piece. In our app you will be able to sell the clothes that you no longer use and buy new clothes so that you can spice up your wardrobe, <br><br> This way we can be feel free again and have new clothes without having to commit to an industry that destroys our home planet and us.</h4>
 
-
+    <h2 class="how">😁🌱🌎. Wearly Founder.</h2>
 
     <footer class="footer">
       <nav class="nav">
