--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <title>Wearly</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="cool.css">
+    <link rel="icon" type="image/png" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
-<body class="color-change-2x">
-    <h1 class="main-title fade-in">#makefashionsustaianable</h1>
+<body>
+    <h1 class="main-title fade-in color-change-2x">"your wardrobe everywhere"</h1>
 
-    <a href="beta.html" class="beta-btn btn btn-secondary btn-lg active" role="button" aria-pressed="true">Join Our Beta!</a>
+      <h4 class="main-title fade-in color-change-2x">"generate outfits"</h4>
+
+      <h4 class="main-title fade-in color-change-2x">"stay fresh"</h4>
 
     <footer class="footer">
       <nav class="nav">
         <a class="nav-link" href="index.html">home</a>
-        <a class="nav-link" href="about.html">about</a>
         <a class="nav-link" href="terms.html">terms</a>
         <a class="nav-link" href="privacy.html">privacy</a>
         <a class="nav-link" href="mailto:founders@wearly.wtf">contact</a>
-        <a class="nav-link" href="beta.html">Join Our Beta!</a>
       </nav>
     </footer>
 
