--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
       <h4 class="main-title fade-in color-change-2x">"generate outfits"</h4>
 
+      <h4 class="main-title fade-in color-change-2x">"saving the planet with algorithms"</h4>
+
       <h4 class="main-title fade-in color-change-2x">"stay fresh"</h4>
 
     <footer class="footer">
