--- a/privacy.html
+++ b/privacy.html
@@ -61,6 +61,7 @@ Link to privacy policy of third party service providers used by the app
           <a class="nav-link" href="terms.html">terms</a>
           <a class="nav-link" href="privacy.html">privacy</a>
           <a class="nav-link" href="mailto:founders@wearly.wtf">contact</a>
+          <a class="nav-link" href="https://apps.apple.com/app/id1510229298">Get Wearly on iOS!</a>
         </nav>
       </footer>
 
