--- a/terms.html
+++ b/terms.html
@@ -46,6 +46,7 @@ Once the purchased has been finished and correctly processed by the payment proc
           <a class="nav-link" href="terms.html">terms</a>
           <a class="nav-link" href="privacy.html">privacy</a>
           <a class="nav-link" href="mailto:founders@wearly.wtf">contact</a>
+          <a class="nav-link" href="https://apps.apple.com/app/id1510229298">Get Wearly on iOS!</a>
         </nav>
       </footer>
 
