--- a/terms.html
+++ b/terms.html
@@ -4,12 +4,36 @@
     <meta charset="utf-8">
     <title>Wearly</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="cool.css">
-    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
     <body>
-      <strong class="color-change-2x">Terms &amp; Conditions</strong> <p>
+      <nav class="navbar navbar-expand-lg navbar-light navbar-custom navbar-style">
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item navbar-unselected">
+              <a class="nav-link" href="index.html">home</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="terms.html">Terms & Services<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item navbar-unselected">
+              <a class="nav-link" href="privacy.html">privacy policy</a>
+            </li>
+            <li class="nav-item navbar-unselected">
+              <a class="nav-link" href="mailto:founders@wearly.wtf">contact</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="https://apps.apple.com/app/id1510229298">Get Wearly on iOS!</a>
+            </li>
+          </ul>
+        <span class="navbar-challenge">
+        #WEARLYCHALLENGE
+        </span>
+        </div>
+      </nav>
+      <h1 class="main-title">Terms &amp; Conditions</h1> <p>
         By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to Tomas Gesino and Matias Armentano.
   Tomas Gesino and Matias Armentano  are committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.
   The Wearly app stores and processes personal data that you have provided to us, in order to provide my Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the Wearly app won’t work properly or at all.
@@ -26,13 +50,13 @@ Regarding the payments made in the app in exchange for real items of the type ap
 Regarding the purchase of an item of type apparel Tomas Gesino and Matias Armentano do not intervene between the user and the payment processing platform (“Mercado Pago”, Mercado Libre SRL, CUIT 30-70308853-4) thus any error or omission made by either the user or the payment processing platform (“Mercado Pago”, Mercado Libre SRL, CUIT 30-70308853-4). The purchase of items is directly between the user and the seller without any intervention of Tomas Gesino and Matias Armentano.
 Once the purchased has been finished and correctly processed by the payment processing platform (“Mercado Pago”, Mercado Libre SRL, CUIT 30-70308853-4) the seller will receive the address provided by the user and will then will be in charge of completing the shipment, the seller has full responsibility of the shipping of the item and Tomas Gesino and Matias Armentano do not intervene in any way. Once the payment is completed the user will be able to talk with the seller through the in app messaging system, in which the seller will inform the user the state of the shipping. Once the payment is completed the user will be able to see the purchased item in his “virtual wardrobe”. Data collected, such as images migh be used for processing by de apps algortithms, with machine learning and artificial intelligence, this inforimation will alwyas be kept in Wearly databases and will only be used to impove its services and product recomendations.
 
-      </p> <p><strong class="color-change-2x">Changes to This Terms and Conditions</strong></p> <p>
+</p> <p><h1 class="sub-title">Changes to This Terms and Conditions</h1></p> <p>
         I may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Terms and Conditions on this page.
   These terms and conditions are effective as of 2020-08-17
 
       </p> <p>
       These terms and conditions are effective as of 2020-04-15
-      </p> <p><strong class="color-change-2x">Contact Us</strong></p> <p>
+    </p> <p><h1 class="sub-title">Contact Us</h1></p> <p>
       If you have any questions or suggestions about my
       Terms and Conditions, do not hesitate to contact me
       at founders@wearly.wtf.
@@ -40,15 +64,44 @@ Once the purchased has been finished and correctly processed by the payment proc
 
       <br><br>
 
-      <footer class="footer">
-        <nav class="nav">
-          <a class="nav-link" href="index.html">home</a>
-          <a class="nav-link" href="terms.html">terms</a>
-          <a class="nav-link" href="privacy.html">privacy</a>
-          <a class="nav-link" href="mailto:founders@wearly.wtf">contact</a>
-          <a class="nav-link" href="https://apps.apple.com/app/id1510229298">Get Wearly on iOS!</a>
-        </nav>
-      </footer>
+      <div class="row last-row">
+        <div class="col-3">
+          <a href="https://www.instagram.com/wearlyapp/"class="instagram-title">Instagram</a>
+          <br>
+          <a href="https://twitter.com/WearlyAI"class="twitter-title">Twitter</a>
+          <br>
+          <a href="https://vm.tiktok.com/ZSajDDpY/"class="tiktok-title">TikTok</a>
+          <br>
+          <a href="mailto:contact@wearl.wtf"class="email-title">contact@wearly.wtf</a>
+        </div>
+        <div class="col-3">
+          <a class="nav-link bottom-nav" href="indexstyle.html">home</a>
+          <a class="nav-link bottom-nav" href="terms.html">Terms & Services <span class="sr-only">(current)</span></a>
+          <a class="nav-link bottom-nav" href="privacy.html">privacy policy</a>
+          <a class="nav-link bottom-nav" href="mailto:founders@wearly.wtf">contact</a>
+          <a class="nav-link bottom-nav" href="https://apps.apple.com/app/id1510229298">Get Wearly on iOS!</a>
+        </div>
+        <div class="col-6">
+          <a href="https://apps.apple.com/app/id1510229298">
+            <img src="images/Download_on_the_App_Store_Badge_US-UK_RGB_wht_092917.svg" alt="">
+          </a>
+          <img class="wearl-logo" src="images/wearly-logo-sm.svg" alt="">
+          <h1 class="navbar-challenge">
+          #WEARLYCHALLENGE
+          </h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-3">
+
+        </div>
+        <div class="col-3">
+          <h1 class="heart-bottom">❤️</h1>
+        </div>
+        <div class="col-3">
+
+        </div>
+      </div>
 
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
